despliegue de la imagen

--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
-    <p>4</p>
-    <p>5</p>
-    <p>6</p>
-    <p>7</p>
-    <p>8</p>
-    <p>9</p>
-    <p>10</p>
+    <center>
+    <h1>Python</h1>
+    <img src="https://static.vecteezy.com/system/resources/previews/012/697/295/non_2x/3d-python-programming-language-logo-free-png.png" width ="100"  >
+    </center>
 </body>
 </html>
